[workspace]
members = ["components/*", "cmd/*"]
exclude = [
    "cmd/dbmigrations",
    "cmd/schedulerwithworker",
    "cmd/scheduler",
    "cmd/vmworker",
    "cmd/webapi",
    "cmd/discordbroker",
]
resolver = "2"

[workspace.dependencies]
metrics = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-futures = { version = "0.2.5" }
async-trait = "0.1"
reqwest = { version = "0.12.2", features = ["json", "stream"] }
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
anyhow = "1.0"
deno_core = "0.283"
axum = { version = "0.7.4", features = ["ws", "multipart", "macros"] }
tonic = "0.10.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
url = "2.2"
tracing-log = "0.2"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
regex = "1.10"
oauth2 = "4.4.2"
image = { version = "0.25.1" }

twilight-model = { version = "0.15.4" }
twilight-http = { version = "0.15.4" }
twilight-gateway = { version = "0.15.4" }
twilight-cache-inmemory = { version = "0.15.4" }
twilight-util = { version = "0.15.4", features = ["permission-calculator"] }
twilight-validate = { version = "0.15.3" }
