[workspace]
members = ["components/*", "cmd/*"]
exclude = [
    "cmd/dbmigrations",
    "cmd/schedulerwithworker",
    "cmd/scheduler",
    "cmd/vmworker",
    "cmd/webapi",
    "cmd/discordbroker",
]
resolver = "2"

[workspace.dependencies]
metrics = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tracing = "0.1"
tracing-futures = { version = "0.2.5" }
async-trait = "0.1"
reqwest = { version = "0.12.2", features = ["json", "stream"] }
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
anyhow = "1.0"
deno_core = "0.283"
axum = { version = "0.7.7", features = ["ws", "multipart", "macros"] }
tonic = "0.10.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
url = "2.2"
tracing-log = "0.2"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
regex = "1.10"
oauth2 = "4.4.2"


image = { version = "0.25.1", git = "https://github.com/image-rs/image.git", rev = "6e73a1780b659987acff81849b22a0257da47069" }
base64-simd = "0.8.0"

twilight-model = { version = "0.16.0", git = "https://github.com/jonastar/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9" }
twilight-http = { version = "0.16.0", features = [
    "rustls-platform-verifier",
], git = "https://github.com/jonastar/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9" }
twilight-gateway = { version = "0.16.0", git = "https://github.com/jonastar/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9" }
twilight-cache-inmemory = { version = "0.16.0", git = "https://github.com/jonastar/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9" }
twilight-util = { version = "0.16.0", features = [
    "permission-calculator",
], git = "https://github.com/jonastar/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9" }
twilight-validate = { version = "0.16.0", git = "https://github.com/jonastar/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9" }

# twilight-model = { version = "0.16.0", path = "../forklight/twilight-model" }
# twilight-http = { version = "0.16.0", path = "../forklight/twilight-http" }
# twilight-gateway = { version = "0.16.0", path = "../forklight/twilight-gateway" }
# twilight-cache-inmemory = { version = "0.16.0", path = "../forklight/twilight-cache-inmemory" }
# twilight-util = { version = "0.16.0", features = [
#     "permission-calculator",
# ], path = "../forklight/twilight-util" }
# twilight-validate = { version = "0.16.0", path = "../forklight/twilight-validate" }
