[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduler = { path = "../../components/scheduler" }
discordbroker = { path = "../../components/discordbroker" }
webapi = { path = "../../components/webapi" }
jobs = { path = "../../components/jobs" }
vmworker = { path = "../../components/vmworker" }

common = { path = "../../components/common" }

clap = { workspace = true }
tokio = { workspace = true }
