[package]
name = "blcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
common = { path = "../../components/common" }

twilight-model = { workspace = true }

tracing = { workspace = true }
tracing-log = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
confy = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
