[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
stores = {path="../../components/stores"}
dbrokerapi = {path="../../components/dbrokerapi"}

tracing = "0.1"
clap = {version = "3.0.14", features = ["derive", "env"]}
tokio = { version = "1", features = ["full"] }
twilight-http = {version = "0.9.1", features = ["tracing"]}
