[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
stores = {path="../../components/stores"}
dbrokerapi = {path="../../components/dbrokerapi"}

tracing = {workspace = true}
clap = {workspace = true}
tokio = {workspace = true}
twilight-http = {version = "0.11"}
