[package]
name = "prepare-integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
common = { path = "../../components/common" }
runtime-models = { path = "../../components/runtime-models" }

twilight-model = { workspace = true }

tracing = { workspace = true }
tracing-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
