[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
stores = {path="../../components/stores"}
scheduler-worker-rpc = {path="../../components/scheduler-worker-rpc"}
guild-logger = {path="../../components/guild-logger"}
runtime-models = {path="../../components/runtime-models"}
simpleproto = {path="../../components/simpleproto"}
dbrokerapi = {path="../../components/dbrokerapi"}
botrpc = {path="../../components/botrpc"}

tokio = { version = "1", features = ["full"] }
tokio-stream  = "0.1"
tonic = "0.6"
tracing = "0.1"
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
serde = "1.0"
serde_json = "1.0"
clap = {version = "3.0.14", features = ["derive", "env"]}
async-trait = "0.1"
chrono = "0.4"
anyhow = "1.0"
cron = "0.9"
metrics = "0.18"

twilight-model = "0.9.1"
twilight-http = {version = "0.9.1", features = ["tracing"]}
