[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
stores = {path="../../components/stores"}
scheduler-worker-rpc = {path="../../components/scheduler-worker-rpc"}
guild-logger = {path="../../components/guild-logger"}
runtime-models = {path="../../components/runtime-models"}
simpleproto = {path="../../components/simpleproto"}
dbrokerapi = {path="../../components/dbrokerapi"}
botrpc = {path="../../components/botrpc"}

tokio = {workspace = true}
tonic = {workspace = true}
tracing = {workspace = true}
futures = "0.3"
async-stream = "0.3"
serde = {workspace = true}
serde_json = {workspace = true}
clap = {workspace = true}
async-trait = {workspace = true}
chrono = "0.4"
anyhow = {workspace = true}
cron = "0.9"
metrics = "0.18"

twilight-model = {version = "0.11"}
twilight-http = {version = "0.11"}
