[package]
name = "vmworker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
scheduler-worker-rpc = {path="../../components/scheduler-worker-rpc"}
vmthread = {path="../../components/vmthread"}
runtime = {path="../../components/runtime"}
runtime-models = {path="../../components/runtime-models"}
vm = {path="../../components/vm"}
guild-logger = {path="../../components/guild-logger"}
stores = {path="../../components/stores"}
simpleproto = {path="../../components/simpleproto"}
dbrokerapi = {path="../../components/dbrokerapi"}

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
clap = {version = "3.0.14", features = ["derive", "env"]}
serde = "1.0"
async-trait = "0.1"
anyhow = "1.0"
metrics = "0.18"

twilight-model = {git = "https://github.com/twilight-rs/twilight"}
twilight-http = {git = "https://github.com/twilight-rs/twilight"}