[package]
name = "botrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"}
guild-logger = {path="../../components/guild-logger"}

async-trait = {workspace = true}
tracing = {workspace = true}
tonic = "0.6"
prost = "0.9"
tokio = {workspace = true}
futures = "0.3"

twilight-model = {version = "0.11"}


[build-dependencies]
tonic-build = "0.5"