[package]
name = "botrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
guild-logger = { path = "../../components/guild-logger" }

async-trait = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = "0.12.3"
tokio = { workspace = true }
futures = { workspace = true }

twilight-model = { workspace = true }

[build-dependencies]
tonic-build = "0.10.2"
