[package]
name = "botrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
guild-logger = { path = "../../components/guild-logger" }
service = { path = "../../components/service" }

async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

twilight-model = { workspace = true }
axum = { workspace = true }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio-stream = "0.1.17"
