[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-http = { workspace = true }
twilight-model = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
dotenv = "0.15"
clap = { workspace = true }
chrono = { workspace = true }
oauth2 = "4.1"

metrics = { workspace = true }
metrics-exporter-prometheus = "0.13"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
tracing-opentelemetry = "0.22.0"
opentelemetry_sdk = "0.21.2"
