[package]
name = "dbrokerapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
serde_json = { workspace = true }

twilight-model = { workspace = true }
