[package]
name = "discordoauthwrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"}

async-trait = "0.1"
oauth2 = "4.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
lru = "0.7"

twilight-model = "0.9.1"
twilight-http = {version = "0.9.1", features = ["tracing"]}
