[package]
name = "discordoauthwrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../../components/entities" }

async-trait = { workspace = true }
sea-orm = { workspace = true }
oauth2 = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
lru = "0.7"

twilight-model = { workspace = true }
twilight-http = { workspace = true }
