[package]
name = "guild-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
stores = {path="../../components/stores"}

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = "1.0"

twilight-http = {git = "https://github.com/twilight-rs/twilight", features = ["tracing"]}
twilight-model = {git = "https://github.com/twilight-rs/twilight"}