[package]
name = "guild-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
stores = {path="../../components/stores"}

async-trait = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
serde = {workspace = true}

twilight-http = {version = "0.11"}
twilight-model = {version = "0.11"}