[package]
name = "runtime-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"} 
dbrokerapi = {path="../../components/dbrokerapi"} 

serde_json = "1.0"
ts-rs = {version = "6.1", features=["format"]}
serde = { version = "1.0", features = ["derive"] }

twilight-model = {git = "https://github.com/twilight-rs/twilight"}
twilight-cache-inmemory = {git = "https://github.com/twilight-rs/twilight"}
twilight-http = {git = "https://github.com/twilight-rs/twilight"}
twilight-validate = {git = "https://github.com/twilight-rs/twilight"}
