[package]
name = "runtime-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = {path="../../components/stores"} 
dbrokerapi = {path="../../components/dbrokerapi"} 

serde_json = {workspace = true}
# ts-rs = {version = "6.2.1", features=["format"]}
ts-rs = {version = "6.2.1", features=[]}
serde = { version = "1.0", features = ["derive"] }

twilight-model = {version = "0.11"}
twilight-cache-inmemory = {version = "0.11"}
twilight-http = {version = "0.11"}
twilight-validate = {version = "0.11"}
