[package]
name = "runtime-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stores = { path = "../../components/stores" }
dbrokerapi = { path = "../../components/dbrokerapi" }

serde_json = { workspace = true }
# ts-rs = {version = "6.2.1", features=["format"]}
ts-rs = { version = "11.0", features = ["format"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
base64-simd = { workspace = true }

twilight-model = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-http = { workspace = true }
twilight-validate = { workspace = true }
