[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
vmthread = {path="../../components/vmthread"}
vm = {path="../../components/vm"}
guild-logger = {path="../../components/guild-logger"}
stores = {path="../../components/stores"}
tscompiler = {path="../../components/tscompiler"}
runtime-models = {path="../../components/runtime-models"}
validation = {path="../../components/validation"}
dbrokerapi = {path="../../components/dbrokerapi"}

twilight-cache-inmemory = {git = "https://github.com/twilight-rs/twilight"}
twilight-http = {git = "https://github.com/twilight-rs/twilight", features = ["tracing"]}
twilight-model = {git = "https://github.com/twilight-rs/twilight"}
twilight-util = {git = "https://github.com/twilight-rs/twilight", features = ["permission-calculator"]}

tracing = "0.1"

deno_core = "0.124"
v8 = "0.41.0"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = {version = "0.6", features = ["io"]}
futures = "0.3"
anyhow = "1.0"
url = "2.2"
serde_json = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
reqwest = {version = "0.11", features = ["stream"]}
bytes = "1.1"
governor = "0.3"
chrono = {version = "0.4", features=["serde"]}


[build-dependencies]
tscompiler = {path="../../components/tscompiler"}