[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../../components/common"}
vmthread = {path="../../components/vmthread"}
vm = {path="../../components/vm"}
guild-logger = {path="../../components/guild-logger"}
stores = {path="../../components/stores"}
tscompiler = {path="../../components/tscompiler"}
runtime-models = {path="../../components/runtime-models"}
validation = {path="../../components/validation"}
dbrokerapi = {path="../../components/dbrokerapi"}

twilight-cache-inmemory = {workspace = true}
twilight-http = {workspace = true}
twilight-model = {workspace = true}
twilight-util = {workspace = true}

tracing = {workspace = true}

deno_core = {workspace = true}
v8 = {workspace = true}

serde = { version = "1.0", features = ["derive"] }
tokio = {workspace = true}
tokio-stream = "0.1"
tokio-util = {version = "0.6", features = ["io"]}
futures = "0.3"
anyhow = {workspace = true}
url = "2.2"
serde_json = {workspace = true}
async-trait = {workspace = true}
lazy_static = {workspace = true}
reqwest = {version = "0.11", features = ["stream"]}
bytes = "1.2.1"
governor = "0.3"
chrono = {workspace = true}


[build-dependencies]
tscompiler = {path="../../components/tscompiler"}