[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../components/common" }
stores = { path = "../../components/stores" }
scheduler-worker-rpc = { path = "../../components/scheduler-worker-rpc" }
guild-logger = { path = "../../components/guild-logger" }
runtime-models = { path = "../../components/runtime-models" }
simpleproto = { path = "../../components/simpleproto" }
dbrokerapi = { path = "../../components/dbrokerapi" }
botrpc = { path = "../../components/botrpc" }
vm = { path = "../../components/vm" }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
cron = "0.12"
metrics = { workspace = true }

twilight-model = { workspace = true }
twilight-http = { workspace = true }
