[package]
name = "stores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = {version = "0.11"}
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
sqlx = {version = "0.5", features = ["runtime-async-std-rustls", "postgres", "chrono", "macros", "offline", "json"]}
oauth2 = "4.1"
dashmap = "5.1.0"
rand = "0.8"
base64 = "0.13"
chrono = "0.4"
tracing = "0.1"
