[package]
name = "tscompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.40.0", features = ["sourcemap"] }
sourcemap = "9.0"
swc = "0.289.0"
swc_ecmascript = { version = "0.256.0", features = ["parser"] }
