[package]
name = "tscompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "21.0", features = ["sourcemap"] }
sourcemap = "9.3"
swc = "62.0"
swc_ecmascript = { version = "60.0", features = ["parser"] }
