[package]
name = "validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
runtime-models = { path = "../../components/runtime-models" }

regex = "1.5"
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
